[package]
name = "gao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
env_logger = "0.10.0"
ntex = { version = "0.6.0", features = ["cookie", "tokio"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"